Correcting the active filter contrast ratio for better accessibility

--- a/assets/style.css
+++ b/assets/style.css
@@ -111,8 +111,8 @@ h2 {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
-	background-color: #BEB45A;
+	color: #FFFFFF;
+	background-color: #897616;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
